--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 
 body {
   margin: 0;
+  cursor: default;
 }
 
 p {
@@ -45,11 +46,20 @@ p {
   width: 35%;
 }
 
-.firstPage .firstPageHeader .firstPageHeaderLeft p {
+.firstPage .firstPageHeader .firstPageHeaderLeft a {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 1.4rem;
   font-weight: 400;
   color: #fff;
+  text-decoration: none;
+}
+
+.firstPage .firstPageHeader .firstPageHeaderLeft a:hover {
+  color: #c7c7c7;
+}
+
+.firstPage .firstPageHeader .firstPageHeaderLeft a:active {
+  color: #000;
 }
 
 .firstPage .firstPageHeader .firstPageHeaderLogo {
@@ -91,11 +101,20 @@ p {
   color: #fff;
 }
 
-.firstPage .firstPageHeader .firstPageHeaderRight :nth-child(2) p {
+.firstPage .firstPageHeader .firstPageHeaderRight :nth-child(2) a {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 1.4rem;
   font-weight: 400;
   color: #fff;
+  text-decoration: none;
+}
+
+.firstPage .firstPageHeader .firstPageHeaderRight :nth-child(2) a:hover {
+  color: #c7c7c7;
+}
+
+.firstPage .firstPageHeader .firstPageHeaderRight :nth-child(2) a:active {
+  color: #000;
 }
 
 .firstPage .firstPageHeader .firstPageHeaderRight :nth-child(3) {
@@ -106,6 +125,15 @@ p {
 
 .firstPage .firstPageHeader .firstPageHeaderRight :nth-child(3) svg:nth-child(1) {
   margin-right: 2rem;
+}
+
+.firstPage .firstPageHeader .firstPageHeaderRight :nth-child(3) svg:hover {
+  fill: black;
+}
+
+.firstPage .firstPageHeader .firstPageHeaderRight :nth-child(3) svg:focus {
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
 }
 
 .firstPage h1 {
@@ -120,7 +148,7 @@ p {
   color: #fff;
 }
 
-.firstPage a {
+.firstPage .firstPageButton {
   text-decoration: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -143,6 +171,16 @@ p {
   font-size: 1.8rem;
   font-weight: 500;
   letter-spacing: 0.3rem;
+}
+
+.firstPage .firstPageButton:hover {
+  background-color: #797878;
+  -webkit-transform: scaleX(1.02);
+          transform: scaleX(1.02);
+  opacity: 0.8;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  font-size: 1.9rem;
 }
 
 .firstPage .firstPageFooter {
@@ -243,6 +281,16 @@ p {
   color: #333;
 }
 
+.secondPage .secondPageContent .secondPageContentButtons a:hover {
+  background-color: #6b6b6b;
+  color: #fff;
+  -webkit-transform: translateY(0.3rem);
+          transform: translateY(0.3rem);
+  letter-spacing: 0.15em;
+  -webkit-transition: 0.35s;
+  transition: 0.35s;
+}
+
 .secondPage .secondPageContent .secondPageContentBlocks {
   width: 100%;
   display: -webkit-box;
@@ -263,10 +311,35 @@ p {
   display: -ms-flexbox;
   display: flex;
   width: 32rem;
+  overflow: hidden;
+}
+
+.secondPage .secondPageContent .secondPageContentBlocks a:hover img {
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+  -webkit-transition: 1s;
+  transition: 1s;
+  -webkit-filter: blur(0);
+          filter: blur(0);
+}
+
+.secondPage .secondPageContent .secondPageContentBlocks a:focus img {
+  -webkit-filter: blur(10px);
+          filter: blur(10px);
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.secondPage .secondPageContent .secondPageContentBlocks a:hover p {
+  bottom: 5rem;
+  -webkit-transition: 1s;
+  transition: 1s;
 }
 
 .secondPage .secondPageContent .secondPageContentBlocks a img {
   width: 100%;
+  -webkit-filter: blur(1.1px);
+          filter: blur(1.1px);
 }
 
 .secondPage .secondPageContent .secondPageContentBlocks a p {
@@ -347,6 +420,17 @@ p {
   text-transform: uppercase;
 }
 
+.thirdPage a:hover {
+  -webkit-transform: translateY(0.3rem);
+          transform: translateY(0.3rem);
+  letter-spacing: 0.15em;
+  -webkit-transition: 0.35s;
+  transition: 0.35s;
+  background-color: #000;
+  border: 2px solid #fff;
+  color: #fff;
+}
+
 .forthPage {
   width: 110rem;
   margin: 12rem auto;
@@ -388,10 +472,29 @@ p {
   display: flex;
   width: 35rem;
   position: relative;
+  overflow: hidden;
+}
+
+.forthPage .forthPageBlockS a:hover img {
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+  -webkit-filter: blur(0);
+          filter: blur(0);
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.forthPage .forthPageBlockS a:hover p {
+  bottom: 5rem;
+  letter-spacing: 0.05em;
+  -webkit-transition: 1.1s;
+  transition: 1.1s;
 }
 
 .forthPage .forthPageBlockS a img {
   width: 100%;
+  -webkit-filter: blur(1.1px);
+          filter: blur(1.1px);
 }
 
 .forthPage .forthPageBlockS a p {
@@ -431,5 +534,393 @@ p {
   font-weight: 500;
   letter-spacing: 0.1em;
   text-transform: uppercase;
+}
+
+.forthPage .forthPageButton:hover {
+  -webkit-transform: translateY(0.3rem);
+          transform: translateY(0.3rem);
+  letter-spacing: 0.15em;
+  -webkit-transition: 0.35s;
+  transition: 0.35s;
+  background-color: #fff;
+  border: 2px solid #000;
+  color: #000;
+}
+
+.fivthPage {
+  width: 110rem;
+  margin: 0 auto 15rem;
+}
+
+.fivthPage p {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 1.4rem;
+  font-weight: 400;
+  color: #fff;
+  color: black;
+  font-size: 2.1rem;
+  text-align: center;
+}
+
+.fivthPage h1 {
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 3rem;
+  font-weight: 700;
+  color: black;
+  text-align: center;
+  margin-bottom: 6rem;
+}
+
+.fivthPage .fivthPageBlocks {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 100%;
+}
+
+.fivthPage .fivthPageBlocks div {
+  width: 50%;
+}
+
+.fivthPage .fivthPageBlocks div img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 30rem;
+  width: 100%;
+}
+
+.fivthPage .fivthPageBlocks div:nth-child(2), .fivthPage .fivthPageBlocks div:nth-child(3) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.fivthPage .fivthPageBlocks div:nth-child(2) img, .fivthPage .fivthPageBlocks div:nth-child(3) img {
+  width: 50%;
+}
+
+.sixthPage {
+  width: 100%;
+  background-color: black;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+}
+
+.sixthPage h3 {
+  margin-top: 10rem;
+  text-align: center;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 1.4rem;
+  font-weight: 400;
+  color: #fff;
+  font-size: 2.1rem;
+}
+
+.sixthPage h1 {
+  margin: 1.5rem 0 6rem;
+  text-align: center;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 3rem;
+  font-weight: 700;
+  color: #fff;
+}
+
+.sixthPage .sixthPageBlocks {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 50%;
+  height: 9rem;
+  margin: 0 auto 12rem;
+}
+
+.sixthPage .sixthPageBlocks .sixthPageBlocksLeft {
+  width: 35%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.sixthPage .sixthPageBlocks .sixthPageBlocksLeft div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.sixthPage .sixthPageBlocks .sixthPageBlocksLeft div svg {
+  margin-right: 2rem;
+}
+
+.sixthPage .sixthPageBlocks .sixthPageBlocksLeft div p {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 1.4rem;
+  font-weight: 400;
+  color: #fff;
+  font-size: 1.8rem;
+}
+
+.sixthPage .sixthPageBlocks .sixthPageBlocksRight {
+  width: 50%;
+  border: 1px solid #fff;
+  background-color: black;
+  padding: 1rem;
+}
+
+.sixthPage .sixthPageBlocks .sixthPageBlocksRight div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #fff;
+  height: 100%;
+}
+
+.sixthPage .sixthPageBlocks .sixthPageBlocksRight div input {
+  width: 45%;
+  height: 4rem;
+  padding: 0;
+  padding-left: 1rem;
+  border: 1px solid #D6D6D6;
+}
+
+.sixthPage .sixthPageBlocks .sixthPageBlocksRight div input:active {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.sixthPage .sixthPageBlocks .sixthPageBlocksRight div input:focus {
+  font-size: 2rem;
+}
+
+.sixthPage .sixthPageBlocks .sixthPageBlocksRight div a {
+  height: 4rem;
+  width: 40%;
+  text-decoration: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: black;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 1.4rem;
+  font-weight: 400;
+  color: #fff;
+  font-weight: 500;
+  letter-spacing: 0.1em;
+}
+
+.sixthPage .sixthPageBlocks .sixthPageBlocksRight div a:hover {
+  -webkit-transform: translateX(0.1rem);
+          transform: translateX(0.1rem);
+  letter-spacing: 0.1em;
+  -webkit-transition: 0.35s;
+  transition: 0.35s;
+  background-color: #fff;
+  border: 1px solid #000;
+  color: #000;
+}
+
+.seventhPage {
+  width: 110rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 8rem auto 6rem;
+}
+
+.seventhPage .seventhPageLinks {
+  width: 23%;
+}
+
+.seventhPage .seventhPageLinks h1 {
+  border-bottom: 1px solid #000;
+  margin: 0 0 3rem;
+  padding-bottom: 1rem;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 1.8rem;
+  font-weight: 500;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+}
+
+.seventhPage .seventhPageLinks div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.seventhPage .seventhPageLinks div a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 1.4rem;
+  font-weight: 400;
+  color: #fff;
+  color: black;
+  text-decoration: none;
+  margin-bottom: 1.5rem;
+}
+
+.seventhPage .seventhPageLinks div a:hover {
+  color: #969595;
+  text-decoration: underline;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.seventhPage .seventhPagePayment {
+  width: 23%;
+}
+
+.seventhPage .seventhPagePayment h1 {
+  border-bottom: 1px solid #000;
+  margin: 0 0 3rem;
+  padding-bottom: 1rem;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 1.8rem;
+  font-weight: 500;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+}
+
+.seventhPage .seventhPagePayment p {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 1.4rem;
+  font-weight: 400;
+  color: #fff;
+  color: black;
+  margin-bottom: 2rem;
+}
+
+.seventhPage .seventhPagePayment img {
+  margin-right: 2rem;
+}
+
+.seventhPage .seventhPageContacts {
+  width: 23%;
+}
+
+.seventhPage .seventhPageContacts h1 {
+  border-bottom: 1px solid #000;
+  margin: 0 0 3rem;
+  padding-bottom: 1rem;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 1.8rem;
+  font-weight: 500;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+}
+
+.seventhPage .seventhPageContacts div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 1.5rem;
+}
+
+.seventhPage .seventhPageContacts div p {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 1.4rem;
+  font-weight: 400;
+  color: #fff;
+  color: black;
+  margin-left: 2rem;
+}
+
+.seventhPage .seventhPageSocials {
+  width: 23%;
+}
+
+.seventhPage .seventhPageSocials h1 {
+  border-bottom: 1px solid #000;
+  margin: 0 0 3rem;
+  padding-bottom: 1rem;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 1.8rem;
+  font-weight: 500;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+}
+
+.seventhPage .seventhPageSocials p {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 1.4rem;
+  font-weight: 400;
+  color: #fff;
+  color: black;
+  margin-bottom: 2rem;
+}
+
+.seventhPage .seventhPageSocials svg {
+  margin-right: 2rem;
+}
+
+.seventhPage .seventhPageSocials svg:hover {
+  fill: #aaaaaa;
+}
+
+footer {
+  width: 110rem;
+  border-top: 1px solid #000;
+  margin: 0 auto;
+}
+
+footer div {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 2rem;
+}
+
+footer div p {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 1.4rem;
+  font-weight: 400;
+  color: #fff;
+  color: #000;
+}
+
+footer div p:last-child {
+  text-decoration: underline;
 }
 /*# sourceMappingURL=style.css.map */
