--- a/style.scss
+++ b/style.scss
@@ -4,11 +4,13 @@
 
 body {
   margin: 0;
+  cursor: default;
 }
 
 p {
     margin: 0;
 }
+
 
 @mixin FPHeader {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -16,6 +18,18 @@ p {
     font-weight: 400;
     color: #fff;
 }
+
+@mixin SeventhPageH1 {
+    border-bottom: 1px solid #000;
+    margin: 0 0 3rem;
+    padding-bottom: 1rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 1.8rem;
+    font-weight: 500;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+} 
+
 
 .firstPage {
   height: 100vh;
@@ -39,8 +53,15 @@ p {
                 align-items: center;
                 width: 35%;
 
-                    p {
+                    a {
                         @include FPHeader();
+                        text-decoration: none;
+                        &:hover{
+                            color: rgb(199, 199, 199);
+                        }
+                        &:active {
+                            color: #000;
+                        }
                     }
             }
 
@@ -71,8 +92,15 @@ p {
 
                     :nth-child(2) {
 
-                            p {
+                            a {
                                 @include FPHeader();
+                                text-decoration: none;
+                                &:hover {
+                                    color: rgb(199, 199, 199);
+                                }
+                                &:active {
+                                    color: #000;
+                                }
                             }
                     }
 
@@ -81,6 +109,13 @@ p {
 
                             svg:nth-child(1) {
                                 margin-right: 2rem;
+                            }
+
+                            svg:hover {
+                                fill: black;
+                            }
+                            svg:focus {
+                                transform: scale(1.3);
                             }
                     }
             }
@@ -97,7 +132,7 @@ p {
 
     }
 
-    a {
+    .firstPageButton {
         text-decoration: none;
         display: flex;
         justify-content: center;
@@ -110,7 +145,15 @@ p {
         @include FPHeader();
         font-size: 1.8rem;
         font-weight: 500;
-        letter-spacing: 0.3rem;       
+        letter-spacing: 0.3rem;
+        &:hover {
+            background-color:rgb(121, 120, 120);
+            transform: scaleX(1.02);
+            opacity: 0.8;
+            transition: 0.5s;
+            font-size: 1.9rem;
+            
+        }       
     }
 
     .firstPageFooter {
@@ -181,6 +224,13 @@ p {
                             letter-spacing: 0.1em;
                             text-transform: uppercase;
                             color: #333;
+                            &:hover {
+                                background-color: rgb(107, 107, 107);
+                                color: #fff;
+                                transform: translateY(0.3rem);
+                                letter-spacing: 0.15em;
+                                transition: 0.35s;
+                            }
                         }   
                 }
 
@@ -191,18 +241,33 @@ p {
                     row-gap: 20px;
                     justify-content: space-between;
                     margin-top: 5rem;
-                    
                     flex-wrap: wrap;
+                        
                         a {
                             position: relative;
                             display: flex;                        
                             width: 32rem;
+                            overflow: hidden;
                             // height: 28rem;
+                            &:hover img {
+                                transform: scale(1.3);
+                                transition: 1s;
+                                filter: blur(0);
+                            }
+                            &:focus img {
+                                filter: blur(10px);
+                                transition: 1s;
+                            }
+                            &:hover p {
+                                bottom: 5rem;
+                                transition: 1s;
+                            }
 
                                 img {
                                     width: 100%;
-                                }
-
+                                    filter: blur(1.1px);
+                                    }
+                                    
                                 p {
                                     position: absolute;
                                     bottom: 3rem;
@@ -214,11 +279,7 @@ p {
                                     text-align: center;
                                 }
                         }
-
                 }
-
-                
-            
         }
 }
 
@@ -243,8 +304,6 @@ p {
             font-weight: 700;
             text-align: center;
             margin: 0 0 4.5rem;
-            
-
         }
         
         p {
@@ -271,7 +330,14 @@ p {
             color: black;
             letter-spacing: 0.1em;
             text-transform: uppercase;
-            
+            &:hover {
+                transform: translateY(0.3rem);
+                letter-spacing: 0.15em;
+                transition: 0.35s;
+                background-color: #000;
+                border: 2px solid #fff;
+                color: #fff;
+            }
         }
 }
 
@@ -303,12 +369,23 @@ p {
 
                 a {
                     display: flex;
-                    
                     width: 35rem;
                     position: relative;
+                    overflow: hidden;
+                    &:hover img {
+                        transform: scale(1.3);
+                        filter: blur(0);
+                        transition: 1s;
+                    }
+                    &:hover p {
+                        bottom: 5rem;
+                        letter-spacing: 0.05em;
+                        transition: 1.1s;
+                    }
     
                         img {
                         width: 100%;
+                        filter: blur(1.1px);
                         }
     
                         p {
@@ -338,8 +415,275 @@ p {
             font-weight: 500;
             letter-spacing: 0.1em;
             text-transform: uppercase;
-
+            &:hover {
+                transform: translateY(0.3rem);
+                letter-spacing: 0.15em;
+                transition: 0.35s;
+                background-color: #fff;
+                border: 2px solid #000;
+                color: #000;
+            }
         }
-
 }
 
+.fivthPage {
+    width: 110rem;
+    margin: 0 auto 15rem;
+
+        p {
+            @include FPHeader();
+            color: black;
+            font-size: 2.1rem;
+            text-align: center;
+        }
+
+        h1 {
+            font-family: 'Times New Roman', Times, serif;
+            font-size: 3rem;
+            font-weight: 700;
+            color: black;
+            text-align: center;
+            margin-bottom: 6rem;
+        }
+
+        .fivthPageBlocks {
+            display: flex;
+            flex-wrap: wrap;
+            width: 100%;
+            
+                div {
+                    width: 50%;
+
+                        img {
+                            display: flex;
+                            height: 30rem;
+                            width: 100%;
+                        }
+                }
+                
+                div:nth-child(2), div:nth-child(3) {
+                    display: flex;
+
+                        img {
+                            width: 50%;
+                        }
+                }
+        }
+}
+
+.sixthPage {
+    width: 100%;
+    background-color: black;
+    border-top: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+    
+        h3 {
+            margin-top: 10rem;
+            text-align: center;
+            @include FPHeader();
+            font-size: 2.1rem;
+        }
+
+        h1 {
+            margin: 1.5rem 0 6rem;
+            text-align: center;
+            font-family: 'Times New Roman', Times, serif;
+            font-size: 3rem;
+            font-weight: 700;
+            color: #fff;
+        }
+
+        .sixthPageBlocks {
+            display: flex;
+            justify-content: space-between;
+            width: 50%;
+            height: 9rem;
+            margin: 0 auto 12rem;
+
+                .sixthPageBlocksLeft {
+                    width: 35%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+
+                        div {
+                            display: flex;
+                            align-items: center;
+
+                                svg {
+                                    margin-right: 2rem;
+                                }
+
+                                p {
+                                    @include FPHeader();
+                                    font-size: 1.8rem;
+                                }
+                        }
+                }
+
+                .sixthPageBlocksRight {
+                    width: 50%;
+                    border: 1px solid #fff;
+                    background-color: black;
+                    padding: 1rem;
+
+                        div {
+                            display: flex;
+                            justify-content: space-around;
+                            align-items: center;
+                            background-color: #fff;
+                            height: 100%;
+
+                                input {
+                                    width: 45%;
+                                    height: 4rem;
+                                    padding: 0;
+                                    padding-left: 1rem;
+                                    border: 1px solid #D6D6D6;
+                                    &:active {
+                                        transform: scale(1.1);
+                                    }
+                                    &:focus {
+                                        font-size: 2rem;
+                                    }
+                                }
+
+                                a {
+                                    height: 4rem;
+                                    width: 40%;
+                                    text-decoration: none;
+                                    display: flex;
+                                    justify-content: center;
+                                    align-items: center;
+                                    background-color: black;
+                                    @include FPHeader();
+                                    font-weight: 500;
+                                    letter-spacing: 0.1em;
+                                    &:hover{
+                                        transform: translateX(0.1rem);
+                                        letter-spacing: 0.1em;
+                                        transition: 0.35s;
+                                        background-color: #fff;
+                                        border: 1px solid #000;
+                                        color: #000; 
+                                    }
+                                }
+                        }
+                }
+        }
+}
+
+.seventhPage {
+    width: 110rem;
+    display: flex;
+    justify-content: space-between;
+    margin: 8rem auto 6rem;
+
+        .seventhPageLinks {
+            width: 23%;
+
+                h1 {
+                    @include SeventhPageH1();
+                }
+
+                div {
+                    display: flex;
+                    flex-direction: column;
+
+                        a {
+                            display: flex;
+                            @include FPHeader();
+                            color: black;
+                            text-decoration: none;
+                            margin-bottom: 1.5rem;
+                            &:hover {
+                                color: rgb(150, 149, 149);
+                                text-decoration: underline;
+                                transition: 1s;
+                            }
+                        }
+                }
+        }
+
+        .seventhPagePayment {
+            width: 23%;
+
+                h1 {
+                    @include SeventhPageH1();
+                }
+
+                p {
+                    @include FPHeader();
+                    color: black;
+                    margin-bottom: 2rem;
+                }
+
+                img {
+                    margin-right: 2rem;
+                }
+        }
+
+        .seventhPageContacts {
+            width: 23%;
+
+                h1 {
+                    @include SeventhPageH1();
+                }
+
+                div {
+                    display: flex;
+                    align-items: center;
+                    margin-bottom: 1.5rem;
+
+                        p {
+                            @include FPHeader();
+                            color: black;
+                            margin-left: 2rem;
+                        }
+                }
+        }
+
+        .seventhPageSocials {
+            width: 23%;
+
+                h1 {
+                    @include SeventhPageH1();
+                }
+
+                p {
+                    @include FPHeader();
+                    color: black;
+                    margin-bottom: 2rem;
+                }
+
+                svg {
+                    margin-right: 2rem;
+                    &:hover {
+                        fill:rgb(170, 170, 170)
+                    }
+                }
+
+        }
+}
+
+footer {
+    width: 110rem;
+    border-top: 1px solid #000;
+    margin: 0 auto;
+
+        div {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            margin-top: 2rem;
+
+                p {
+                    @include FPHeader();
+                    color: #000;
+                }
+
+                p:last-child {
+                    text-decoration: underline;
+                }
+        }
+}
